More formats and URL changed to URI