@@ -7,7 +7,7 @@ import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
 import ws.furrify.artists.avatar.dto.AvatarDTO;
 
-import java.net.URL;
+import java.net.URI;
 import java.time.ZonedDateTime;
 import java.util.Arrays;
 import java.util.UUID;
@@ -43,8 +43,8 @@ class AvatarTest implements CommandLineRunner {
                                 .ownerId(userId)
                                 .extension(AvatarExtension.PNG)
                                 .filename("test.png")
-                                .fileUrl(new URL("https://example.com/"))
-                                .thumbnailUrl(new URL("https://example.com/"))
+                                .fileUrl(new URI("/test"))
+                                .thumbnailUrl(new URI("/test"))
                                 .md5("3c518eeb674c71b30297f072fde7eba5")
                                 .createDate(ZonedDateTime.now())
                                 .build()
